<resources>
    <!-- GENERAL -->
    <string name="username_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="or_separator">OR</string>
    <string name="continue_separator">Continue with</string>
    <!--MAIN-->
    <string name="app_name"></string>
    <!--HOME FRAGMENT-->
    <string name="headline">Headline</string>
    <string name="home_title">Home</string>
    <string name="random_recipe">Random Recipes</string>
    <string name="favorites_recipe">Most popular</string>
    <!--ALL RECIPES FRAGMENT-->
    <string name="all_recipes_title">All Recipes</string>
    <!--PROFILE FRAGMENT-->
    <string name="recipe_description">RECIPES :</string>
    <!--ADD RECIPES ACTIVITY-->
    <string name="add_recipe_title">New Recipes</string>
    <string name="hint_add_recipe_url">Recipe URL</string>
    <string name="add_step_button">ADD STEP</string>
    <string name="category_title">Category :</string>
    <string name="recipe_title">Recipe</string>
    <string name="online_title">Online recipe ?</string>
    <string name="ingredients_title">Ingredients :</string>
    <string name="photos_title">Photos :</string>
    <string name="steps_title">Steps :</string>
    <string name="error_recipe_name">You have to choose a recipe name</string>
    <string name="add_recipe_button_url">ADD RECIPE BY URL</string>
    <string name="add_recipe_button_manually">ADD RECIPE MANUALLY</string>
    <!-- LANDING PAGE -->
    <string name="landing_title">Cookbook</string>
    <string name="login_button">Login</string>
    <string name="register_sentence">Don\'t have an account yet ? please</string>
    <string name="register_word">register</string>
    <string name="snackbar_auth">Authenticating…</string>
    <string name="snackbar_register">Registration…</string>
    <string name="snackbar_success">Registration complete</string>
    <!-- BOTTOM SHEET -->
    <string name="register_button">Register</string>
    <string name="login_word">login</string>
    <string name="login_sentence">Do you have an account ? please</string>
    <string name="title_register_page">Welcome, please register</string>
    <string name="title_login_page">Welcome, please Login</string>
    <!--PROFILE FRAGMENT-->
    <string name="register_date">Registered since: %s</string>
    <string name="action_menu_settings">Settings</string>
    <string name="action_menu_logout">Logout</string>
    <string name="facebook_app_id">190699912159028</string>
    <string name="fb_login_protocol_scheme">fb190699912159028</string>
    <!--SOCIAL FRAGMENT-->
    <string name="social_fragment_title">Social</string>
    <string name="posted_by">Posted by %s</string>
    <string name="timestamp">%d minute(s) ago</string>
    <!--RECIPES DETAILS ACTIVITY-->
    <string name="ingredient_title">INGREDIENTS</string>
    <string name="recipe_step_title">RECIPE</string>
    <string name="add_button_text">Add</string>
    <string name="share_button_text">Share</string>
    <string name="update_button_text">Update</string>
    <string name="cancel_ingredient_text">Cancel</string>
    <string name="error_shared">Please add at least : \n</string>
    <string name="error_photo">one photo</string>
    <string name="error_step">one step</string>
    <string name="error_ingredient">one ingredient</string>
    <string name="name_ingredient_text">Name :</string>
    <string name="unit_ingredient_text">Unit :</string>
    <string name="quantity_ingredient_text">Qt. :</string>
    <string name="pick_gallery">Pick image from gallery</string>
    <string name="pick_camera">Pick image from camera</string>
    <string name="add_step_description">Add a new step</string>
    <string name="update_button">SAVE</string>
    <string name="step">Step %s</string>
    <string name="step_bottom_sheet_qt_error">Insert a description for this step</string>
    <string name="ingredient_bottom_sheet_qt_error">Insert a quantity</string>
    <string name="ingredient_bottom_sheet_name_error">Insert a name</string>
    <string name="description_error">Add a description(at least 5 characters)</string>
    <string name="share_bottom_sheet_title">Add a description to present your recipe :</string>

    <string-array name="titles_main_recycler_view">
        <item>Random recipes</item>
        <item>Favorite recipes</item>
        <item>Todo list</item>
    </string-array>

    <string-array name="unit_list">
        <item>gr</item>
        <item>kg</item>
        <item>ml</item>
        <item>cl</item>
        <item>l</item>
        <item>CaS</item>
        <item>CaC</item>
        <item>none</item>
    </string-array>

    <string-array name="category_list">
        <item>Starter</item>
        <item>Main</item>
        <item>Dessert</item>
        <item>Drink</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">User</string>

    <!-- Messages Preferences -->
    <string name="username_title_pref">Your username</string>
    <string name="profile_url_title_pref">Your profile\'s photo</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
