<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginPage.LandingPageActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_accueil"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/landing_title"
        android:layout_width="wrap_content"
        android:text="@string/landing_title"
        android:fontFamily="@font/playfair_display"
        android:textSize="@dimen/title_text_size"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_button"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="@dimen/round_button_width"
        android:layout_height="@dimen/round_button_height"
        android:background="@drawable/round_button"
        android:text="@string/login_button"
        app:layout_constraintTop_toBottomOf="@id/landing_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_sentence_container"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/register_sentence_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/register_sentence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_sentence"
            android:paddingBottom="@dimen/margin_to_border"/>

        <TextView
            android:id="@+id/register_word_landing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_word"
            android:textColor="@color/colorAccent"
            android:paddingBottom="@dimen/margin_to_border"
            android:paddingLeft="@dimen/margin_register_word"
            android:clickable="true"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="@drawable/bottom_sheet_top_shadow"
        app:layout_anchor="@id/bottom_sheet_register" />
    <include layout="@layout/bottom_sheet_login_page"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>