<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".addRecipePage.AddRecipeFragment">

    <TextView
        android:id="@+id/new_recipe_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_recipe_title"
        android:textSize="@dimen/title_size"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/segoepr"
        android:layout_marginTop="@dimen/margin_title"
        android:layout_marginStart="@dimen/margin_to_border"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/url_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_recipe_title"
        app:layout_constraintBottom_toTopOf="@id/or_separator_view"
        android:text="@string/add_recipe_button_url"
        android:textColor="@color/colorAccent"
        android:paddingLeft="@dimen/margin_in_button"
        android:paddingRight="@dimen/margin_in_button" />

    <LinearLayout
        android:id="@+id/or_separator_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/url_button"
        app:layout_constraintBottom_toTopOf="@id/mannually_button"
        android:weightSum="3">

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"
            android:background="#80000000"
            android:layout_marginStart="@dimen/margin_to_border"
            android:layout_marginEnd="@dimen/margin_to_border" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:text="@string/or_separator"
            android:textColor="@color/colorAccent" />

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"
            android:background="#80000000"
            android:layout_marginStart="@dimen/margin_to_border"
            android:layout_marginEnd="@dimen/margin_to_border" />

    </LinearLayout>

    <Button
        android:id="@+id/mannually_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or_separator_view"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/add_recipe_button_manually"
        android:textColor="@color/colorAccent"
        android:paddingLeft="@dimen/margin_in_button"
        android:paddingRight="@dimen/margin_in_button" />


</androidx.constraintlayout.widget.ConstraintLayout>